@@ -13,6 +13,7 @@ To do:
 	- [roms]  $996: set default filename in file selectors
 	- [roms]  $997: more dissassembled lines of code in the debugger (resizeable).
 	- [roms]  $998: close the debugger when you press F5.
+	- [roms]  $1001: added scaling support for skin & lcd (beware: CPU intensive).
 
 - 12/03/2005, version 1.80p:
 	- [kevin] $933: increased link timeout from 1.5 to 10s.
